--- a/Day91-100/100.Python面试题集.md
+++ b/Day91-100/100.Python面试题集.md
@@ -27,7 +27,7 @@
 >
 
 
-​    
+
 
 2. Python中`is`运算符和`==`运算符有什么区别？
 
@@ -45,7 +45,7 @@
     > - value（值）：对象包含的数据。
 
 
-​    
+
 
 3. Python中如何动态设置和获取对象属性？
 
@@ -247,7 +247,7 @@
     ```
 
 
-​    
+
 
 12. 用一行代码实现求任意非负整数的阶乘。
 
@@ -273,7 +273,7 @@
     ```
 
 
-​    
+
 
 13. 写一个函数返回传入的整数列表中第二大的元素。
 
@@ -283,7 +283,7 @@
     ```
 
 
-​    
+
 
 14. 删除列表中的重复元素并保留原有的顺序。
 
@@ -300,7 +300,7 @@
     ```
 
 
-​    
+
 
 15. 找出两个列表中的相同元素和不同元素。
 
@@ -313,50 +313,50 @@
     ```
 
 
-​    
+
 
 16. 列表中的某个元素出现次数占列表元素总数的半数以上，找出这个元素。
 
 
-​    
-​    ```Python
-​    lst = ['a', 'a', 'b', 5, 'a', 'a', 5]
-​    
+
+```Python
+lst = ['a', 'a', 'b', 5, 'a', 'a', 5]
+
     from collections import Counter
 
 
-​    
-​    # 1.collections.Counter内置类型
-​    def half_ele_counter(lst):
-​        return Counter(lst).most_common(1)[0][0]
+
+# 1.collections.Counter内置类型
+def half_ele_counter(lst):
+    return Counter(lst).most_common(1)[0][0]
 
 
-​    
-​    print(half_ele_counter(lst))  # 'a'
+
+print(half_ele_counter(lst))  # 'a'
 
 
-​    
-​    # 2.O(n)算法
-​    # 我们知道该数字出现的次数比其他所有数字出现的次数之和还要多
-​    # 因此可以在遍历数组的同时记录元素出现的次数，如果数字重复，则次数加1，否则减1
-​    # 当次数为0时统计下一个数，最后一个统计的数就是该数字，且此时次数等于超出数组长度一半的个数
-​    def half_ele(lst):
-​        half = 0
-​        times = 0
-​        for ele in lst:
-​            if times == 0:
-​                half = ele
-​                times = 1
-​            elif ele == half:
-​                times += 1
-​            else:
-​                times -= 1
-​        return half
+
+# 2.O(n)算法
+# 我们知道该数字出现的次数比其他所有数字出现的次数之和还要多
+# 因此可以在遍历数组的同时记录元素出现的次数，如果数字重复，则次数加1，否则减1
+# 当次数为0时统计下一个数，最后一个统计的数就是该数字，且此时次数等于超出数组长度一半的个数
+def half_ele(lst):
+    half = 0
+    times = 0
+    for ele in lst:
+        if times == 0:
+            half = ele
+            times = 1
+        elif ele == half:
+            times += 1
+        else:
+            times -= 1
+    return half
 
 
-​    
-​    print(half_ele(lst))  # 'a'
-​    ```
+
+print(half_ele(lst))  # 'a'
+```
 
 
 17. 实现对有序列表进行二分查找的算法。
@@ -366,12 +366,12 @@
     ```
 
 
-​    
-​    def binary_search(array, item):
-​        """通用写法"""
-​        left = 0
-​        right = len(array) - 1
-​    
+
+def binary_search(array, item):
+    """通用写法"""
+    left = 0
+    right = len(array) - 1
+
         while left <= right:
             mid = (left + right) // 2
             cur = array[mid]
@@ -384,23 +384,23 @@
         return None
 
 
-​    
-​    def binary_search_std_lib(array, item):
-​        """标准库调用"""
-​        index = bisect.bisect_left(array, item)
-​        if index != len(array) and array[index] == item:
-​            return index
-​        return None
+
+def binary_search_std_lib(array, item):
+    """标准库调用"""
+    index = bisect.bisect_left(array, item)
+    if index != len(array) and array[index] == item:
+        return index
+    return None
 
 
-​    
-​    def binary_search_by_recursion(array, item, left, right):
-​        """递归实现，首次递归需指定 left=0, right=(len(sorted_collection)-1)"""
-​        if right < left:
-​            return None
-​        mid = left + (right - left) // 2
-​        cur = array[mid]
-​    
+
+def binary_search_by_recursion(array, item, left, right):
+    """递归实现，首次递归需指定 left=0, right=(len(sorted_collection)-1)"""
+    if right < left:
+        return None
+    mid = left + (right - left) // 2
+    cur = array[mid]
+
         if cur == item:
             return mid
         elif cur > item:
@@ -409,16 +409,16 @@
             return binary_search_by_recursion(array, item, mid + 1, right)
 
 
-​    
-​    if __name__ == '__main__':
-​        print(binary_search([0, 5, 7, 10, 15], 5))
-​        print(binary_search_std_lib([0, 5, 7, 10, 15], 5))
-​        print(binary_search_by_recursion([0, 5, 7, 10, 15], 5, 0, 4))
-​    
+
+if __name__ == '__main__':
+    print(binary_search([0, 5, 7, 10, 15], 5))
+    print(binary_search_std_lib([0, 5, 7, 10, 15], 5))
+    print(binary_search_by_recursion([0, 5, 7, 10, 15], 5, 0, 4))
+
     ```
 
 
-​    
+
 
 18. 输入年月日，输出这一天是这一年的第几天。
 
@@ -427,20 +427,20 @@
     ```
 
 
-​    
-​    def which_day(year, month, day):
-​        date_ = datetime.date(year, month, day)
-​        # %j 表示对date对象格式化字符串为年内的第几天（001-366）
-​        return int(date_.strftime('%j'))
+
+def which_day(year, month, day):
+    date_ = datetime.date(year, month, day)
+    # %j 表示对date对象格式化字符串为年内的第几天（001-366）
+    return int(date_.strftime('%j'))
 
 
-​    
-​    print(which_day(2019, 2, 28))
-​    
+
+print(which_day(2019, 2, 28))
+
     ```
 
 
-​    
+
 
 19. 统计一个字符串中各个字符出现的次数。
 
@@ -449,9 +449,9 @@
     ```
 
 
-​    
-​    string = 'hello world'
-​    
+
+string = 'hello world'
+
     # 1.调用collections.defaultdict
     dct = defaultdict(int)
     for char in string:
@@ -463,7 +463,7 @@
     ```
 
 
-​    
+
 
 20. 在Python中如何实现单例模式？
 
@@ -482,9 +482,9 @@
     ```
 
 
-​    
-​    singleton = Singleton()
-​    
+
+singleton = Singleton()
+
     # 将上面的代码保存在文件 my_singleton.py 中，要使用时，
     # 直接在其他文件中导入此文件中的对象，这个对象即是单例模式的对象
     from my_singleton import singleton
@@ -492,11 +492,11 @@
     singleton.foo()
 
 
-​    
-​    # 2.使用装饰器
-​    def singleton(cls):
-​        """单例类的装饰器，用 @singleton 装饰后的类即为单例类"""
-​    
+
+# 2.使用装饰器
+def singleton(cls):
+    """单例类的装饰器，用 @singleton 装饰后的类即为单例类"""
+
         _instances = {}  # 实例字典，用于存放 类和对应的单例 键值对
         _locker = Lock()  # 将实例对象写入字典前上锁，以确保线程安全
     
@@ -512,13 +512,13 @@
         return get_instance
 
 
-​    
-​    # 3.使用基类继承
-​    class Singleton(object):
-​        """单例类的基类，通过重写__new__()方法，其他类继承它，生成的实例即为单例"""
-​        _instance = None
-​        _locker = Lock()
-​    
+
+# 3.使用基类继承
+class Singleton(object):
+    """单例类的基类，通过重写__new__()方法，其他类继承它，生成的实例即为单例"""
+    _instance = None
+    _locker = Lock()
+
         def __new__(cls, *args, **kwargs):
             if cls._instance is None:
                 with cls._locker:
@@ -527,13 +527,13 @@
             return cls._instance
 
 
-​    
-​    # 4.使用元类
-​    class SingletonMeta(type):
-​        """单例类的元类，通过重写__call__()方法，其他类指定它为元类后，生成的实例即为单例"""
-​        _instances = {}
-​        _lock = Lock()
-​    
+
+# 4.使用元类
+class SingletonMeta(type):
+    """单例类的元类，通过重写__call__()方法，其他类指定它为元类后，生成的实例即为单例"""
+    _instances = {}
+    _lock = Lock()
+
         def __call__(cls, *args, **kwargs):
             if cls not in cls._instances:
                 with cls._lock:
@@ -542,30 +542,30 @@
             return cls._instances[cls]
 
 
-​    
-​    if __name__ == '__main__':
-​        @singleton
-​        class Person:
-​            pass
-​    
+
+if __name__ == '__main__':
+    @singleton
+    class Person:
+        pass
+
         a = Person()
         b = Person()
         print(a, b, a is b)
 
 
-​    
-​        class Person(Singleton):
-​            pass
-​    
+
+    class Person(Singleton):
+        pass
+
         c = Person()
         d = Person()
         print(c, d, c is d)
 
 
-​    
-​        class Person(metaclass=SingletonMeta):
-​            pass
-​    
+
+    class Person(metaclass=SingletonMeta):
+        pass
+
         e = Person()
         f = Person()
         print(e, f, e is f)
@@ -574,8 +574,8 @@
     > 更多示例：[stack overflow](https://stackoverflow.com/questions/6760685/creating-a-singleton-in-python)   [官网装饰器样例实现](https://wiki.python.org/moin/PythonDecoratorLibrary#Singleton)
 
 
-​    
-​    
+
+
 21. 下面的代码会输出什么。
 
     ```Python
@@ -590,13 +590,13 @@
     ```
 
 
-​    
-​    a = A(1)
-​    a.__value = 2
-​    print(a.__value)
-​    print(a.value)
-​    ```
-​    
+
+a = A(1)
+a.__value = 2
+print(a.__value)
+print(a.value)
+```
+
     ```python
     2
     1
@@ -616,10 +616,10 @@
     ```
 
 
-​    
-​    def time_it(fn):
-​        """函数调用执行用时装饰器"""
-​    
+
+def time_it(fn):
+    """函数调用执行用时装饰器"""
+
         @wraps(fn)
         def wrapper(*args, **kwargs):
             start = time.time()
@@ -632,7 +632,7 @@
     ```
 
 
-​    
+
 
 23. 写一个遍历指定目录下指定后缀名的文件的函数。
 
